unpackaged/main/default/objects/Accounting_Instructions__c/Accounting_Instructions__c.object-meta.xml
<CustomObject>
    <label>Accounting Instructions</label>
    <nameField>
        <displayFormat>ACTG-{00000}</displayFormat>
        <label>Accounting Instructions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Instructions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>