unpackaged/main/default/objects/Accounting_Instructions__c/fields/Accounting_Complete__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accounting Complete</label>
    <type>Checkbox</type>
</CustomField>