unpackaged/main/default/objects/Accounting_Instructions__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not rerun</fullName>
            </value>
            <value>
                <fullName>Rerun</fullName>
            </value>
            <value>
                <fullName>Rerun w/ fee</fullName>
            </value>
            <value>
                <fullName>Stop ACH</fullName>
            </value>
            <value>
                <fullName>Other Comments</fullName>
            </value>
            <value>
                <fullName>ACH Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>