unpackaged/main/default/objects/Accounting_Instructions__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Accounting Instructions</relationshipLabel>
    <relationshipName>Accounting_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>