unpackaged/main/default/objects/Accounting_Instructions__c/fields/Case_Status_new__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_new__c</fullName>
    <label>Case Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>