unpackaged/main/default/objects/Accounting_Instructions__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <formula>IF(
 Accounting_Complete__c = TRUE, 
 LastModifiedDate,
 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed</label>
    <type>DateTime</type>
</CustomField>