unpackaged/main/default/objects/Accounting_Instructions__c/fields/Duplicate_Comments__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Comments__c</fullName>
    <formula>Case__r.Multiple_Bounces__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicate Comments</label>
    <type>Text</type>
</CustomField>