unpackaged/main/default/objects/Accounting_Instructions__c/fields/Legal_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Name__c</fullName>
    <formula>IF( 
NOT(ISBLANK(Payment_Agreement__c)), 
Payment_Agreement__r.Legal_Name__c, 
Case__r.Legal_Name__c  
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Name</label>
    <type>Text</type>
</CustomField>