unpackaged/main/default/objects/Accounting_Instructions__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matter</label>
    <referenceTo>advpm__Matter__c</referenceTo>
    <relationshipLabel>Accounting Instructions</relationshipLabel>
    <relationshipName>Accounting_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>