unpackaged/main/default/objects/Accounting_Instructions__c/fields/NF_Renewal_Rep__c.field-meta.xml
<CustomField>
    <fullName>NF_Renewal_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NF Renewal Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounting_Instructions</relationshipName>
    <type>Lookup</type>
</CustomField>