unpackaged/main/default/objects/Accounting_Instructions__c/fields/Opoprtunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opoprtunity_Stage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opoprtunity Stage</label>
    <type>Text</type>
</CustomField>