unpackaged/main/default/objects/Accounting_Instructions__c/fields/Other_Comments__c.field-meta.xml
<CustomField>
    <fullName>Other_Comments__c</fullName>
    <label>Other Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>