unpackaged/main/default/objects/Accounting_Instructions__c/fields/Rerun_ACH_Date__c.field-meta.xml
<CustomField>
    <fullName>Rerun_ACH_Date__c</fullName>
    <label>Rerun ACH Date</label>
    <type>Date</type>
</CustomField>