unpackaged/main/default/objects/Accounting_Instructions__c/fields/Returned_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Returned_Payment_Type__c</fullName>
    <formula>Case__r.Returned_Payment_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Returned Payment Type</label>
    <type>Text</type>
</CustomField>