unpackaged/main/default/objects/Accounting_Instructions__c/fields/Send_to_Accounting__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Accounting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to Accounting</label>
    <type>Checkbox</type>
</CustomField>