unpackaged/main/default/objects/Accounting_Instructions__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH Bounce</fullName>
            </value>
            <value>
                <fullName>ACH Payment</fullName>
            </value>
            <value>
                <fullName>CC Payment Confirmations</fullName>
            </value>
            <value>
                <fullName>Check by Fax</fullName>
            </value>
            <value>
                <fullName>Check Request</fullName>
            </value>
            <value>
                <fullName>Close Form</fullName>
            </value>
            <value>
                <fullName>Commission Question</fullName>
            </value>
            <value>
                <fullName>Credit Memos</fullName>
            </value>
            <value>
                <fullName>Equipment Sale</fullName>
            </value>
            <value>
                <fullName>Extension Rent</fullName>
            </value>
            <value>
                <fullName>Loan Modification</fullName>
            </value>
            <value>
                <fullName>Loan Payoff</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reapply Funds</fullName>
            </value>
            <value>
                <fullName>Recovery</fullName>
            </value>
            <value>
                <fullName>Unapplied Cash/Funds</fullName>
            </value>
            <value>
                <fullName>Wire In</fullName>
            </value>
            <value>
                <fullName>Settlement Agreement</fullName>
            </value>
            <value>
                <fullName>Catchup</fullName>
            </value>
            <value>
                <fullName>Bank Change or Update</fullName>
            </value>
            <value>
                <fullName>Resume Payment</fullName>
            </value>
            <value>
                <fullName>Material Modification</fullName>
            </value>
            <value>
                <fullName>Paydown</fullName>
            </value>
            <value>
                <fullName>Short Term Modification</fullName>
            </value>
            <value>
                <fullName>Reconciliation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>