unpackaged/main/default/objects/Accounting_Instructions__c/validationRules/Prohibit_changes_to_Acct_Instructions.validationRule-meta.xml
<ValidationRule>
    <fullName>Prohibit_changes_to_Acct_Instructions</fullName>
    <active>true</active>
    <description>Prohibit changes to Accounting Instructions once Case is Sent to Accounting</description>
    <errorConditionFormula>AND(
Send_to_Accounting__c =True,
Override__c = FALSE,
NOT(
$User.ProfileId = "00e800000014YDt"),
   OR(
     ISCHANGED( Action__c ), 
     ISCHANGED( Amount__c ), 
     ISCHANGED( Case__c ),  
     ISCHANGED( Case_Status_new__c ), 
     ISCHANGED( Case_Status__c ), 
     ISCHANGED( Date_of_Bounce__c ), 
     ISCHANGED( Debit_Amount__c ), 
     ISCHANGED( Duplicate_Comments__c ), 
     ISCHANGED( Legal_Name__c ), 
     ISCHANGED( Loan_Number__c ), 
     ISCHANGED( Other_Comments__c ),  
     ISCHANGED( Payment_Type__c ), 
     ISCHANGED( Rerun_ACH_Date__c ), 
     ISCHANGED( Resume_ACH_Date__c ), 
     ISCHANGED( Returned_Payment_Type__c ), 
     ISCHANGED( Type__c )
      )
    )</errorConditionFormula>
    <errorMessage>Once Accounting Instructions have been Sent to Accounting they can no longer be edited. Create new Accounting Instructions to proceed.</errorMessage>
</ValidationRule>