unpackaged/main/default/objects/Accounting_Instructions__c/validationRules/Type_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
    <errorMessage>Type is a required field.</errorMessage>
</ValidationRule>